# doge-light-client

./: .gitignore  Cargo.toml  README.md
doge-light-client/: Cargo.toml  LICENSE  README.md
doge-light-client/src/: block_data_tracker.rs  chain_state.rs  constants.rs  core_data.rs  error.rs  init_params.rs  lib.rs  main.rs  network_params.rs
doge-light-client/src/doge/: address.rs  mod.rs  transaction.rs  varuint.rs
doge-light-client/src/hash/: mod.rs  ripemd160.rs  ripemd160_impl.rs  scrypt_doge.rs  sha256.rs  sha256_impl.rs  traits.rs
doge-light-client/src/hash/merkle/: append_tree.rs  delta_merkle_proof.rs  fixed_append_tree.rs  merkle_proof.rs  mod.rs  utils.rs
doge-light-client/src/logic/: check_doge_block.rs  check_doge_block_seq.rs  mod.rs
doge-light-client/src/math/: btc_difficulty.rs  mod.rs
qed-doge-bridge-helper/: Cargo.toml  README.md
qed-doge-bridge-helper/examples/: test_tx.rs  test_tx_2.rs  test_tx_3.rs
qed-doge-bridge-helper/src/: bridge_tx_proof_v1.rs  error.rs  lib.rs  tx_template.rs
qed-doge-data-link/: Cargo.toml  README.md
qed-doge-data-link/examples/: append_blocks.rs  cache_block_header.rs  cache_blocks.rs  check_real_block.rs  gen_g16_test_data.rs  gen_solana_block_item.rs  gen_solana_block_item_testnet.rs  gen_solana_doge_init_payload.rs  gen_solana_init_payload_testnet.rs  get_doge_addresses.rs  merkle.rs
qed-doge-data-link/src/: block_cache.rs  block_header_cache.rs  bridge_state_helpers.rs  chain_state_helper.rs  electrs_link.rs  hex_helpers.rs  lib.rs  simple_merkle_node.rs  simple_merkle_tree.rs  traits.rs  wrapped_hash_256.rs
qed-doge-macros/: Cargo.toml
qed-doge-macros/src/: lib.rs
