[package]
name = "qed-doge-data-link"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.0", features = ["hex"] }
bs58 = { version = "0.5.1", default-features = false, features = ["check", "alloc"] }
ripemd = "0.1.3"
scrypt = { version = "0.11.0", default-features = false, features = [] }
borsh = { version = "0.10.4" }
thiserror = "^1.0"
num-derive = "^0.3"
num-traits = "^0.2"
zerocopy = { git = "https://github.com/cf/zerocopy-borsh-serde", branch = "borsh-serde-v0.8.23", features = ["borsh", "serde"] }
zerocopy-derive = { git = "https://github.com/cf/zerocopy-borsh-serde", branch = "borsh-serde-v0.8.23" }

bitcoin = { git = "https://github.com/QEDProtocol/rust-dogecoin", rev = "9b52ed2ddc18c2062c741b7df7a6e70aabde3bb8", features = [ "serde" ] }
anyhow = { version = "1.0.75", default-features = false, features = [] }

doge-light-client = { path = "../doge-light-client", default-features = false, features = ["sha2", "serde", "borsh", "bitcoin", "std"] }
qed-doge-bridge-helper = { path = "../qed-doge-bridge-helper", default-features = false, features = ["borsh"] }


ureq = "3.0.9"
serde_json = "1.0"
bincode = "=1.3.3"

hex = "0.4.3"
hex-literal = "0.4.1"
[dev-dependencies]
rand = "0.8"
rand_core = "0.6.0"
